<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.2.4.RELEASE</version>
        <relativePath/>
    </parent>

    <groupId>com.zetes.projects.bosa</groupId>
    <artifactId>bosa-signandvalidation</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Bosa: signandvalidation</name>

    <modules>
        <module>signandvalidation-ws</module>
    </modules>

    <properties>
        <java.version>1.8</java.version>
        <dss.version>5.9</dss.version>
        <jackson-jaxrs-json-provider.version>2.9.9</jackson-jaxrs-json-provider.version>
        <hikaricp.version>3.3.1</hikaricp.version>
        <hsqldb.version>2.5.0</hsqldb.version>
        <springfox.version>2.9.2</springfox.version>
        <log4j2.version>2.12.1</log4j2.version>
    </properties>

    <repositories>
        <repository>
            <id>cefdigital</id>
            <name>CEF Digital</name>
            <url>https://ec.europa.eu/cefdigital/artifact/content/repositories/esignaturedss/</url>
        </repository>
	<repository>
	  <id>gitlab-maven</id>
	  <url>${env.CI_SERVER_URL}/api/v4/projects/${env.CI_PROJECT_ID}/packages/maven</url>
	</repository>
    </repositories>

    <dependencyManagement>
        <dependencies>
            <!-- DSS -->
            <dependency>
                <groupId>eu.europa.ec.joinup.sd-dss</groupId>
                <artifactId>dss-service</artifactId>
                <version>${dss.version}</version>
                <exclusions>
                    <exclusion>
                        <artifactId>commons-logging</artifactId>
                        <groupId>commons-logging</groupId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>eu.europa.ec.joinup.sd-dss</groupId>
                <artifactId>dss-tsl-validation</artifactId>
                <version>${dss.version}</version>
            </dependency>
            <dependency>
                <groupId>eu.europa.ec.joinup.sd-dss</groupId>
                <artifactId>dss-utils-google-guava</artifactId>
                <version>${dss.version}</version>
            </dependency>
            <dependency>
                <groupId>eu.europa.ec.joinup.sd-dss</groupId>
                <artifactId>dss-crl-parser-stream</artifactId>
                <version>${dss.version}</version>
            </dependency>
            <dependency>
                <groupId>eu.europa.ec.joinup.sd-dss</groupId>
                <artifactId>dss-validation-server-common</artifactId>
                <version>${dss.version}</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>eu.europa.ec.joinup.sd-dss</groupId>
                <artifactId>dss-certificate-validation-common</artifactId>
                <version>${dss.version}</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>eu.europa.ec.joinup.sd-dss</groupId>
                <artifactId>dss-signature-remote</artifactId>
                <version>${dss.version}</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>eu.europa.ec.joinup.sd-dss</groupId>
                <artifactId>dss-token</artifactId>
                <version>${dss.version}</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>eu.europa.ec.joinup.sd-dss</groupId>
                <artifactId>dss-enumerations</artifactId>
                <version>${dss.version}</version>
            </dependency>
            <dependency>
                <groupId>eu.europa.ec.joinup.sd-dss</groupId>
                <artifactId>dss-common-remote-dto</artifactId>
                <version>${dss.version}</version>
            </dependency>
            <dependency>
                <groupId>eu.europa.ec.joinup.sd-dss</groupId>
                <artifactId>dss-signature-dto</artifactId>
                <version>${dss.version}</version>
            </dependency>
            <dependency>
                <groupId>eu.europa.ec.joinup.sd-dss</groupId>
                <artifactId>dss-spi</artifactId>
                <version>${dss.version}</version>
            </dependency>
            <dependency>
                <groupId>eu.europa.ec.joinup.sd-dss</groupId>
                <artifactId>dss-pades-pdfbox</artifactId>
                <version>${dss.version}</version>
            </dependency>

            <!-- DB -->
            <dependency>
                <groupId>org.hsqldb</groupId>
                <artifactId>hsqldb</artifactId>
                <version>${hsqldb.version}</version>
            </dependency>
            <dependency>
                <groupId>com.zaxxer</groupId>
                <artifactId>HikariCP</artifactId>
                <version>${hikaricp.version}</version>
            </dependency>

            <!-- Swagger -->
            <dependency>
                <groupId>io.springfox</groupId>
                <artifactId>springfox-swagger2</artifactId>
                <version>${springfox.version}</version>
            </dependency>
            <dependency>
                <groupId>io.springfox</groupId>
                <artifactId>springfox-swagger-ui</artifactId>
                <version>${springfox.version}</version>
            </dependency>

            <dependency>
                <groupId>com.fasterxml.jackson.jaxrs</groupId>
                <artifactId>jackson-jaxrs-json-provider</artifactId>
                <version>${jackson-jaxrs-json-provider.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <distributionManagement>
      <repository>
        <id>gitlab-maven</id>
	<url>${env.CI_SERVER_URL}/api/v4/projects/${env.CI_PROJECT_ID}/packages/maven</url>
      </repository>
      <snapshotRepository>
        <id>gitlab-maven</id>
	<url>${env.CI_SERVER_URL}/api/v4/projects/${env.CI_PROJECT_ID}/packages/maven</url>
      </snapshotRepository>
    </distributionManagement>
</project>
